--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Others"
-    url: /others/
+  - title: "Misc"
+    url: /misc/
 
   # - title: "Teaching"
   #   url: /teaching/    
