--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Cheung Siupaang / Zhang Zhaopeng"
+title                    : "Zhang Zhaopeng / Cheung Siupaang"
 title_separator          : "-"
 name                     : &name "Cheung Siupaang"
 description              : &description "PhD Candidate of Nankai University"
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "zzp.png"
   name             : "张兆鹏"
-  pronouns         : "he/him" # example: "she/her" 
+  pronouns         : # example: "she/her" 
   bio              : "PhD Candidate in Robotics"
   location         : "Tianjin, China"
   employer         : "Nankai University"
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : # "academicpages"
+  github           : "cheungsiupaang"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
