--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Cheung Siupaang / Zhang Zhaopeng"
+title                    : "Hai Yu (于海)"
 title_separator          : "-"
-name                     : &name "Cheung Siupaang"
+name                     : &name "Hai Yu"
 description              : &description "PhD Candidate of Nankai University"
-url                      : https://cheungsiupaang.github.io 
+url                      : https://u-hai.github.io 
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "cheungsiupaang/cheungsiupaang.github.io"
@@ -24,17 +24,17 @@ author:
   # Biographic information
   # avatar           : "zzp.png"
   avatar           : "2025-zzp.jpg"
-  name             : "张兆鹏"
+  name             : "于海"
   pronouns         : # example: "she/her" 
   bio              : "PhD Candidate in Robotics"
   location         : "Tianjin, China"
   employer         : "Nankai University"
   uri              : # URL
-  email            : "zhangzp@mail.nankai.edu.cn"
+  email            : "yuhai@mail.nankai.edu.cn"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com.hk/citations?user=OwkBNLEAAAAJ&hl=zh-CN"
+  googlescholar    : "https://scholar.google.com/citations?user=0MMaeMEAAAAJ&hl=zh-CN"
   impactstory      : # URL
   orcid            : # "http://orcid.org/yourorcidurl"
   semantic         : # URL
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "cheungsiupaang"
+  github           : "u-hai"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
