--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "cheungsiupaang/cheungsiupaang.github.io"
 author:
   # Biographic information
   # avatar           : "zzp.png"
-  avatar           : "2025-zzp.jpg"
+  avatar           : "pic-yuhai.jpg"
   name             : "于海"
   pronouns         : # example: "she/her" 
   bio              : "PhD Candidate in Robotics"
