--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description              : &description "PhD Candidate of Nankai University"
 url                      : https://u-hai.github.io 
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "cheungsiupaang/cheungsiupaang.github.io"
+repository               : "u-hai/u-hai.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
