--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,10 @@ main:
 
   # - title: "Teaching"
   #   url: /teaching/    
-    
+
+  - title: "中文"
+    url: /chinese/   
+  
   # - title: "Portfolio"
   #   url: /portfolio/
 
