--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   # avatar           : "zzp.png"
   avatar           : "pic-yuhai.jpg"
-  name             : "于海"
+  name             : "Hai Yu"
   pronouns         : # example: "she/her" 
   bio              : "PhD Candidate in Robotics"
   location         : "Tianjin, China"
