--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
+  xiaohongshu      : "https://www.xiaohongshu.com/user/profile/5d2c1d760000000012009119"
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
