--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,10 @@ main:
 
   - title: "中文"
     url: /chinese/   
-  
+
+  - title: "留言板"
+  url: /comments/
+
   # - title: "Portfolio"
   #   url: /portfolio/
 
