--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ main:
   - title: "中文"
     url: /chinese/   
 
-  - title: "留言板"
+  - title: "Leave a Message/留言板"
   url: /comments/
 
   # - title: "Portfolio"
