--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Hai Yu (于海)"
+title                    : "Yang Wang (王杨)"
 title_separator          : "-"
-name                     : &name "Hai Yu"
+name                     : &name "Yang Wang"
 description              : &description "PhD Candidate of Nankai University"
-url                      : https://u-hai.github.io 
+url                      : https://wangy1893.github.io 
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "u-hai/u-hai.github.io"
+repository               : "wangy1893/wangy1893.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,13 +24,13 @@ author:
   # Biographic information
   # avatar           : "zzp.png"
   avatar           : "pic-yuhai.jpg"
-  name             : "Hai Yu"
+  name             : "Yang Wang"
   pronouns         : # example: "she/her" 
   bio              : "PhD Candidate in Robotics"
   location         : "Tianjin, China"
   employer         : "Nankai University"
   uri              : # URL
-  email            : "yuhai@mail.nankai.edu.cn"
+  email            : "wangy1893@mail.nankai.edu.cn"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "u-hai"
+  github           : "wangy1893"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
