--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "wangy1893/wangy1893.github.io"
 author:
   # Biographic information
   # avatar           : "zzp.png"
-  avatar           : "pic-yuhai.jpg"
+  avatar           : "wangy.jpg"
   name             : "Yang Wang"
   pronouns         : # example: "she/her" 
   bio              : "PhD Candidate in Robotics"
